# decompilation

./: .gitignore  .pylintrc  LICENSE  README.md  angha.py  evaluate.py  preprocess_angha_dataset.py  preprocess_dataset.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: test_pr.yml
Evaluation_metrics/: em.py
decompile/preprocessing/: dataset.py  preprocess.py  standardize.py
decompile/preprossing/: standardize.py
decompile/trainers/: llama_trainer.py  trainer.py
github/: pull_request_template.md
scripts/: comment_includes.sh  comment_out_main_function.py  delete_comments.py  delete_includes.sh  linters_parser.py  remove_extra_functions_in_jsonl.py
tests/preprocessing/: test_standardize.py
tests/tests_data/preprocessing/: standardize_test_input_1.s  standardize_test_output_1.s
