[tool.poetry]
name = "decompile"
version = "0.1.0"
description = "Python package to covert binary code to high-level code"
authors = ["Ahmed Heakl, Omar Ahmed, Mohanned Ahmed"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
